resetting tasks somewhat work
